[package]
name = "mc-from-random"
version = "0.0.0"
authors = ["MobileCoin"]
# See https://crates.io/category_slugs for valid categories
categories = ["cryptography", "no-std"]
description = "A trait for constructing an object from an CSPRNG"
edition = "2021"
# See https://crates.io/keywords for the common keywords
keywords = ["random", "rng", "cryptography"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mobilecoinfoundation/from-random"
rust-version = "1.68"

[profile.release]
lto = "thin"

[package.metadata.release]
allow-branch = [
    "main"
]
consolidate-commits = true
# TODO: when single-crate
crate-name = mc-from-random
# TODO: when workspace
#crate-release-all = true
# TODO: when workspace only
#dependent-versions = "fix"
# TODO: Fill in with repo admins
owners = [
    "jcape",
    "mobilecoinfoundation/crates-io",
]
pre-release-replacements = [
    { file = "README.md", search = "{{ cookiecutter.crate_namespace_prefix }}[a-z-]+/[0-9.]+", replace = "{{ "{{crate_name}}/{{version}}" }}" },
    { file = "CHANGELOG.md", search = "Unreleased", replace = "{{version}}", min = 1 },
    { file = "CHANGELOG.md", search = "\\.\\.\\.HEAD", replace = "...{{tag_name}}", exactly = 1 },
    { file = "CHANGELOG.md", search = "ReleaseDate", replace = "{{date}}", min = 1 },
    { file = "CHANGELOG.md", search = "<!-- next-header -->", replace = "<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly = 1 },
    { file = "CHANGELOG.md", search = "<!-- next-url -->", replace = "<!-- next-url -->\n[Unreleased]: https://github.com/clap-rs/clap/compare/{{tag_name}}...HEAD", exactly = 1 },
]
# TODO: Only when workspace
# shared-version = true
sign-commit = true
sign-tag = true
tag-name = "v{{version}}"

[dependencies]
rand_core = { version = "0.6", default_features = false }

[dev-dependencies]
rand_chacha = "0.3.1"
